<resources>
    <string name="app_name">Reaction Games</string>
    <string name="app_id" translatable="false">520920641741</string>
    <string name="save_file_name" translatable="false">Save File</string>
    <string name="rate_text_title">Rate this app</string>
    <string name="rate_text_explanation">Hey, you seem to have good reactions! Please rate our app!</string>
    <string name="rate_text_now">Rate now</string>
    <string name="rate_text_later">Later</string>
    <string name="rate_text_never">No, thanks</string>
    <string name="numbers_game" translatable="false">Numbers Game</string>
    <string name="math_game" translatable="false">Math Game</string>
    <string name="rules_game" translatable="false">Rules Game</string>
    <string name="populations_game" translatable="false">Populations Game</string>
    <string name="memory_game" translatable="false">Memory Game</string>
    <string name="login_to_leaderboard">Log in to compete</string>
    <string name="color_reaction_game" translatable="false">Color Reaction Game</string>
    <string name="Times_up">Done!</string>
    <string name="points">%d points</string>
    <string name="wrong_again">Uh! Wrong again!</string>
    <string name="wrong">Oh, that\'s actually incorrect</string>
    <string name="correct">Correct!</string>
    <string name="correct_tens_of_times">Way to go! %d correct on a row!</string>
    <string name="correct_many_times">%d correct on a row!</string>
    <string name="game_over_message">Game over!</string>
    <string-array name="title_congratulations">
        <item>Record!</item>
        <item>New Record!</item>
        <item>Amazing!</item>
        <item>You rock!</item>
        <item>Excellent!</item>
    </string-array>
    <string-array name="subtitle_congratulations">
        <item>Wow! You are awesome!</item>
        <item>Alright, alright, alright</item>
        <item>Veni, vidi, vici</item>
        <item>How do you do it!?</item>
        <item>Leave some for the rest!</item>
    </string-array>
    <string-array name="title_non_congratulations">
        <item>Almost!</item>
        <item>Not close</item>
        <item>Nope</item>
        <item>Terrible&#8230;</item>
        <item>Almost!</item>
    </string-array>
    <string-array name="subtitle_non_congratulations">
        <item>Better luck next time!</item>
        <item>Maybe try another game?</item>
        <item>This is getting embarrassing</item>
        <item>Sometimes I suck too</item>
        <item>Maybe next time?</item>
    </string-array>
    <string name="new_record_score">Score record!</string>
    <string name="non_record_score">Your score</string>
    <string name="new_record_streak">Streak record!</string>
    <string name="non_record_streak">Longest streak</string>
    <string name="pre_math_game">"Tap on the correct answer to the math problem"</string>
    <string name="pre_numbers_game">You\'ll find a color and a number. Only one is correct!</string>
    <string name="pre_rules_game">There is a rule in the center and only one of the value meets it!</string>
    <string name="pre_country_game">Choose the country the meets the central rule</string>
    <string name="ready_to_start">Ready?</string>
    <string name="starting_score">0 points</string>
    <string name="drawer_open" translatable="false">Open navigation drawer</string>
    <string name="drawer_close" translatable="false">Close navigation drawer</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="play_button">Play</string>
    <string name="highscores_button">Highscores</string>
    <string name="how_to_button">How To Play</string>
    <string name="sign_in_button">Sign In</string>
    <string name="numbers_game_button">Numbers</string>
    <string name="numbers_game_explanation">Choose the number or color that matches the center value</string>
    <string name="math_game_button">Math</string>
    <string name="math_game_explanation">Choose the correct answer to the math ecuation</string>
    <string name="rules_game_button">Rules</string>
    <string name="rules_game_explanation">Choose the option the corresponds with the rule in the center</string>
    <string name="populations_game_button">Populations</string>
    <string name="populations_game_explanation">Pick the country that matches the rule in the center</string>
    <string name="back_button">Back</string>
    <string name="random_game_button">Random game</string>
    <string name="random_game_explanation">Pick a game at random to play</string>
    <string name="title_choose_game">Pick a game</string>
    <string name="title_highscores">High scores</string>
    <string name="title_how_to">How to play</string>
    <string name="reaction_chances_left">%d left</string>
    <string name="reaction_display_time">Only took you %s!</string>
    <string name="reaction_too_soon">Oh! That\'s too soon!</string>
    <string name="reaction_game" translatable="false">Reaction Game</string>
    <string name="reaction_game_button">Reflex</string>
    <string name="reaction_game_explanation">When the screen changes color, tap as fast as possible</string>
    <string name="pre_reaction_game">You need to wait for the screen to change color and click as fast as you can</string>
    <string name="color_reaction_game_button">Color Reflex</string>
    <string name="color_reaction_game_explanation">Tap the screen only if the color matches the text</string>
    <string name="pre_color_reaction_game">If the color matches the text, tap the screen as fast as possible!</string>
    <string name="memory_game_button">Memory</string>
    <string name="memory_game_explanation">Remember the number and find it fast</string>
    <string name="pre_memory_game">The number will disappear, and two options will appear. Find the correct one</string>
    <string name="reaction_short_name">Re</string>
    <string name="memory_short_name">Me</string>
    <string name="random_short_name">Ra</string>
    <string name="populations_short_name">Po</string>
    <string name="math_short_name">Ma</string>
    <string name="rules_short_name">Ru</string>
    <string name="numbers_short_name">Nu</string>
    <string name="color_reaction_short_name">Co</string>
    <string name="highscores_title">HIGHSCORES</string>
    <string name="highscores_in_highscores">Highscore:</string>
    <string name="streak_in_highscores">Longest streak:</string>
    <string name="youString">You</string>
    <string name="youSubText">Gotta catch\'em all</string>
    <string name="leaderSubText">Basically Heisenberg</string>
    <string name="secondSubText">Always the bridesmaid&#8230;</string>
    <string name="thirdSubText">Yay! Podium!</string>
    <string name="Native_ad_unit" translatable="false">ca-app-pub-5446158020626099/4033857902</string>
    <string name="Native_ad_unit_large" translatable="false">ca-app-pub-5446158020626099/2248753509</string>
    <string name="Native_ad_unit_card" translatable="false">ca-app-pub-5446158020626099/5700453908</string>
    <string name="Interstitial_ad_unit" translatable="false">ca-app-pub-5446158020626099/7766053508</string>
    <string name="MoPub_Native_ad_id" translatable="false">019a96d46d344242a7ed0e96449f5238</string>
    <string name="invitation_title">Check out my high score at Numbers Reflex Game!</string>
    <string name="invitation_message">"Come and try to beat my score! I got %1$d points on the %2$s"</string>
    <string name="invitation_title_alternate">Check out my new favorite game: Reflex Games!</string>
    <string name="invitation_message_alternate">Come and try to beat me!</string>
    <string name="invitation_cta">Come play!</string>
    <string name="facebook_app_id" translatable="false">658893440930943</string>
    <string name="label_google_sign_in" translatable="false">Firebase + Google Sign In</string>
    <string name="desc_google_sign_in" translatable="false">Use a Google Sign In credential to authenticate with Firebase.</string>
    <string name="label_facebook_login" translatable="false">Firebase + Facebook Login</string>
    <string name="desc_facebook_login" translatable="false">Use a Facebook Login credential to authenticate with Firebase.</string>
    <string name="label_emailpassword" translatable="false">Email/Password Authentication</string>
    <string name="desc_emailpassword" translatable="false">Use an email and password to authenticate with Firebase.</string>
    <string name="desc_firebase_lockup" translatable="false">Firebase logo and name</string>
    <string name="hint_user_id" translatable="false">User ID</string>
    <string name="get_custom_token" translatable="false">Get Token</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="sign_out">Sign Out</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="custom_token" translatable="false">Custom Token</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null" translatable="false">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="firebase_status_fmt" translatable="false">Firebase User: %s</string>
    <string name="firebase_user_management" translatable="false">Firebase User Management</string>
    <string name="google_status_fmt" translatable="false">Google User: %s</string>
    <string name="google_title_text" translatable="false">Google Sign In</string>
    <string name="facebook_status_fmt" translatable="false">Facebook User: %s</string>
    <string name="facebook_title_text" translatable="false">Facebook Login</string>
    <string name="emailpassword_status_fmt" translatable="false">Email User: %s</string>
    <string name="emailpassword_title_text" translatable="false">Email and Password</string>
    <string name="share">Share</string>
    <string name="rate">Rate this app!</string>
    <string name="main_menu">Main Menu</string>
    <string name="play_again">New Game</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="trueString">True</string>
    <string name="falseString">False</string>
    <string name="tapHighestPopulation">Most Population</string>
    <string name="tapSmallestPopulation">Least Population</string>
    <string-array name="numbersInText">
        <item>One</item>
        <item>Two</item>
        <item>Three</item>
        <item>Four</item>
        <item>Five</item>
        <item>Six</item>
        <item>Seven</item>
        <item>Eight</item>
        <item>Nine</item>
        <item>Ten</item>
    </string-array>
    <string-array name="numbersInInt" translatable="false">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>
    <string-array name="colorsInText">
        <item>Red</item>
        <item>Pink</item>
        <item>Purple</item>
        <item>Blue</item>
        <item>Green</item>
        <item>Yellow</item>
        <item>Orange</item>
        <item>Grey</item>
        <item>Brown</item>
        <item>Black</item>
    </string-array>
    <string-array name="colorsInHex" translatable="false">
        <item>F44336</item>
        <item>E91E63</item>
        <item>9C27B0</item>
        <item>3F51B5</item>
        <item>4CAF50</item>
        <item>FFEB3B</item>
        <item>FF9800</item>
        <item>9E9E9E</item>
        <item>795548</item>
        <item>000000</item>
    </string-array>
</resources>