<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="layout.GameList">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                style="@style/gameList">
                <android.support.v7.widget.CardView
                    android:id="@+id/randomGame"
                    style="@style/gameCard"
                    card_view:cardBackgroundColor="@color/colorAccent"
                    card_view:cardCornerRadius="4dp">
                    <TextView
                        style="@style/gameNumberText"
                        android:text="01"/>
                    <TextView
                        style="@style/gameBigText"
                        android:text="@string/random_short_name"
                        android:layout_marginLeft="20dp"/>
                    <TextView
                        style="@style/gameSmallText"
                        android:text="@string/random_game_button"
                        android:layout_marginLeft="20dp"/>
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_shuffle"
                        android:background="#00000000"
                        android:layout_gravity="center_vertical|right"
                        android:layout_marginRight="60dp"/>
                </android.support.v7.widget.CardView>
            </LinearLayout>
            <LinearLayout
                style="@style/gameList">
                <android.support.v7.widget.CardView
                    android:id="@+id/numbersGame"
                    style="@style/gameCard"
                    card_view:cardBackgroundColor="@color/blue_grey_500"
                    card_view:cardCornerRadius="4dp">
                    <TextView
                        style="@style/gameNumberText"
                        android:text="02"/>
                    <TextView
                        style="@style/gameBigText"
                        android:text="@string/numbers_short_name"/>
                    <TextView
                        style="@style/gameSmallText"
                        android:text="@string/numbers_game_button"/>
                </android.support.v7.widget.CardView>
                <android.support.v7.widget.CardView
                    android:id="@+id/mathGame"
                    style="@style/gameCard"
                    card_view:cardBackgroundColor="@color/colorPrimary"
                    card_view:cardCornerRadius="4dp">
                    <TextView
                        style="@style/gameNumberText"
                        android:text="03"/>
                    <TextView
                        style="@style/gameBigText"
                        android:text="@string/math_short_name"/>
                    <TextView
                        style="@style/gameSmallText"
                        android:text="@string/math_game_button"/>
                </android.support.v7.widget.CardView>
            </LinearLayout>
            <LinearLayout
                style="@style/gameList">
                <android.support.v7.widget.CardView
                    android:id="@+id/rulesGame"
                    style="@style/gameCard"
                    card_view:cardBackgroundColor="@color/colorPrimaryDark"
                    card_view:cardCornerRadius="4dp">
                    <TextView
                        style="@style/gameNumberText"
                        android:text="04"/>
                    <TextView
                        style="@style/gameBigText"
                        android:text="@string/rules_short_name"/>
                    <TextView
                        style="@style/gameSmallText"
                        android:text="@string/rules_game_button"/>
                </android.support.v7.widget.CardView>
                <android.support.v7.widget.CardView
                    android:id="@+id/populationsGame"
                    style="@style/gameCard"
                    card_view:cardBackgroundColor="@color/colorPrimaryLight"
                    card_view:cardCornerRadius="4dp">
                    <TextView
                        style="@style/gameNumberText"
                        android:text="05"/>
                    <TextView
                        style="@style/gameBigText"
                        android:text="@string/populations_short_name"/>
                    <TextView
                        style="@style/gameSmallText"
                        android:text="@string/populations_game_button"/>
                </android.support.v7.widget.CardView>
            </LinearLayout>
            <LinearLayout
                style="@style/gameList">
                <android.support.v7.widget.CardView
                    android:id="@+id/reactionGame"
                    style="@style/gameCard"
                    card_view:cardBackgroundColor="@color/blue_grey_700"
                    card_view:cardCornerRadius="4dp">
                    <TextView
                        style="@style/gameNumberText"
                        android:text="06"/>
                    <TextView
                        style="@style/gameBigText"
                        android:text="@string/reaction_short_name"/>
                    <TextView
                        style="@style/gameSmallText"
                        android:text="@string/reaction_game_button"/>
                </android.support.v7.widget.CardView>
                <android.support.v7.widget.CardView
                    android:id="@+id/memoryGame"
                    style="@style/gameCard"
                    card_view:cardBackgroundColor="@color/colorAccent"
                    card_view:cardCornerRadius="4dp">
                    <TextView
                        style="@style/gameNumberText"
                        android:text="07"/>
                    <TextView
                        style="@style/gameBigText"
                        android:text="@string/memory_short_name"/>
                    <TextView
                        style="@style/gameSmallText"
                        android:text="@string/memory_game_button"/>
                </android.support.v7.widget.CardView>
            </LinearLayout>
            <LinearLayout
                style="@style/gameList">
                <android.support.v7.widget.CardView
                    android:id="@+id/colorReaction"
                    style="@style/gameCard"
                    card_view:cardBackgroundColor="@color/colorAccentLight"
                    card_view:cardCornerRadius="4dp">
                    <TextView
                        style="@style/gameNumberText"
                        android:text="08"/>
                    <TextView
                        style="@style/gameBigText"
                        android:text="@string/color_reaction_short_name"/>
                    <TextView
                        style="@style/gameSmallText"
                        android:text="@string/color_reaction_game_button"/>
                </android.support.v7.widget.CardView>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</FrameLayout>
