<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/displayScoreOverlay"
    android:visibility="gone">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/colorPrimary"
            android:text=""
            android:textSize="60sp"
            android:id="@+id/congratulatoryText"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/colorPrimary"
            android:text=""
            android:textStyle="italic"
            android:textSize="20sp"
            android:layout_marginTop="-10dp"
            android:id="@+id/subCongratulatoryText"/>
        <LinearLayout
            style="@style/gameList">
            <android.support.v7.widget.CardView
                style="@style/gameCard"
                android:layout_height="130dp"
                android:id="@+id/scoreGroup"
                card_view:cardBackgroundColor="@color/colorAccent"
                card_view:cardCornerRadius="4dp">
                <TextView
                    style="@style/gameBigText"
                    android:textSize="60sp"
                    android:text=""
                    android:id="@+id/scoreNumberEndGame"/>
                <TextView
                    style="@style/gameSmallText"
                    android:textSize="16sp"
                    android:layout_marginBottom="15dp"
                    android:text=""
                    android:id="@+id/scoreEndGame"/>
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                style="@style/gameCard"
                android:id="@+id/streakGroup"
                android:layout_height="130dp"
                card_view:cardBackgroundColor="@color/colorAccentLight"
                card_view:cardCornerRadius="4dp">
                <TextView
                    style="@style/gameBigText"
                    android:textSize="60sp"
                    android:text=""
                    android:id="@+id/streakNumberEndGame"/>
                <TextView
                    style="@style/gameSmallText"
                    android:textSize="16sp"
                    android:layout_marginBottom="15dp"
                    android:id="@+id/streakEndGame"
                    android:text=""/>
            </android.support.v7.widget.CardView>
        </LinearLayout>
        <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/nativeAdContainer">
        </FrameLayout>
        <LinearLayout
            style="@style/gameList">
            <android.support.v7.widget.CardView
                android:id="@+id/playAgainButton"
                style="@style/gameCard"
                android:layout_height="60dp"
                card_view:cardBackgroundColor="@color/colorPrimary"
                card_view:cardCornerRadius="4dp">
                <TextView
                    style="@style/gameSmallText"
                    android:layout_marginBottom="15dp"
                    android:textSize="16sp"
                    android:text="@string/play_again"/>
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                android:id="@+id/inviteFriends"
                style="@style/gameCard"
                android:layout_height="60dp"
                card_view:cardBackgroundColor="@color/colorPrimaryLight"
                card_view:cardCornerRadius="4dp">
                <TextView
                    style="@style/gameSmallText"
                    android:layout_marginBottom="15dp"
                    android:textSize="16sp"
                    android:text="@string/share"/>
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                android:id="@+id/backToMenuButton"
                style="@style/gameCard"
                android:layout_height="60dp"
                card_view:cardBackgroundColor="@color/colorPrimary"
                card_view:cardCornerRadius="4dp">
                <TextView
                    style="@style/gameSmallText"
                    android:layout_marginBottom="15dp"
                    android:textSize="16sp"
                    android:text="@string/main_menu"/>
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </LinearLayout>
</ScrollView>